@@ -1,22 +1,25 @@
 package com.zhj.study.javase.memery;
 
+import java.lang.ref.PhantomReference;
+import java.lang.ref.ReferenceQueue;
 import java.lang.ref.SoftReference;
 import java.lang.ref.WeakReference;
 
-import com.zhj.study.javase.classloader.material.Demo;
 import com.zhj.study.javase.memery.material.DemoModel;
+import com.zhj.study.javase.memery.material.MBObject;
 
 public class MainTester {
 
 	public static void main(String[] args) {
 //		testMethodStack();
 //		testTLAB();
-//		testReference();
+		testReference();
 //		testMemaryAllocate();
+//		testMinorGC();
 	}
 
 	// 测试方法栈
-	// JVM参数：-Xss1K【并没有报错，可能 jdk6 已经做了一些优化，如果要报错 则执行方法中被注释的两句】
+	// JVM参数：-Xss1K【并没有报错，可能jdk6已经做了一些优化，如果要报错 则执行方法中被注释的两句】
 	private static void testMethodStack() {
 		new Thread(new Runnable() {
 			
@@ -63,24 +66,30 @@ public class MainTester {
 		DemoModel demoModel = new DemoModel();
 		// 软引用
 		SoftReference<DemoModel> softReference = new SoftReference<DemoModel>(new DemoModel());
-		softReference.get().setId("aaa");
-		System.out.println(softReference.get().getId());
-		System.out.println(softReference.get() == null);
+		System.out.println("软引用：" + softReference.get());
 		// 弱引用
 		WeakReference<DemoModel> weakReference = new WeakReference<DemoModel>(new DemoModel());
-		weakReference.get().setId("bbb");
-		System.out.println(weakReference.get().getId());
-		System.out.println(weakReference.get() == null);
+		System.out.println("弱引用：" + weakReference.get());
+		// 虚引用
+		ReferenceQueue<DemoModel> referenceQueue = new ReferenceQueue<DemoModel>();
+		PhantomReference<DemoModel> phantomReference = new PhantomReference<DemoModel>(new DemoModel(), referenceQueue);
+		System.out.println("虚引用：" + phantomReference.get());
+		System.out.println("虚引用：" + phantomReference.isEnqueued());
+		
 		// 手动调用GC
 		System.gc();
 		
-		System.out.println(softReference.isEnqueued());// false，如果空间不够 也会变成true
-		System.out.println(weakReference.isEnqueued());// flase
-		System.out.println(weakReference.get() == null);// true
+		System.out.println("软引用：" + softReference.get());// 对象
+		System.out.println("软引用：" + softReference.isEnqueued());// false，如果空间不够 也会变成true
+		System.out.println("弱引用：" + weakReference.get());// 
+		System.out.println("弱引用：" + weakReference.isEnqueued());// flase
+		System.out.println("虚引用：" + phantomReference.get());// true
+		System.out.println("虚引用：" + phantomReference.isEnqueued());// true
 	}
 	
 	// 测试内存分配情况
-	// 参数：-Xms20M -Xmn10M -Xmx20M -XX:SurvivorRatio=8 -XX:+UseParallelGC
+	// 参数：-Xms20M -Xmn10M -Xmx20M -XX:SurvivorRatio=8 -verbose:gc -XX:+PrintGCDetails -XX:+UseParallelGC
+	// 参数：-Xms20M -Xmn10M -Xmx20M -XX:InitialSurvivorRatio=8 -verbose:gc -XX:+PrintGCDetails -XX:+UseParallelGC
 	// 断点调试
 	// 查看命令：jstat -gcutil pid
 	private static void testMemaryAllocate() {
@@ -89,5 +98,47 @@ public class MainTester {
 		byte[] bytes3 = new byte[1024 * 1024 * 2];
 		System.out.println("准备在 老年代 区域上分配内存");
 		byte[] bytes4 = new byte[1024 * 1024 * 4];
+	}
+	
+	// 测试MinorGC的各种情况
+	// 1. Minor GC的触发
+	// 2. Minor GC时Survivor空间不足的情况下，对象直接进入旧生代
+	// 3. 不同GC的日志
+	// 参数[默认：并行回收GC]：-Xms40M -Xmx40M -Xmn16M -XX:SurvivorRatio=6 -verbose:gc -XX:+PrintGCDetails
+	private static void testMinorGC() {
+		//情况1
+//		MBObject obj = new MBObject(1);
+//		for(int i = 1; i <= 24; i++) {
+//			if(i == 11) {
+//				System.out.println("Eden空间即将用完");
+//			}
+//			if(i == 23) {
+//				System.out.println("Eden空间再次即将用完");
+//			}
+//			new MBObject(1);
+//		}
+		
+		//情况2
+//		MBObject obj = new MBObject(3);
+//		for(int i = 1; i <= 24; i++) {
+//			if(i == 9) {
+//				System.out.println("Eden空间即将用完");
+//			}
+//			if(i == 23) {
+//				System.out.println("Eden空间再次即将用完");
+//			}
+//			new MBObject(1);
+//		}
+		
+		//情况3
+		//参数[串行GC]：-XX:+UseSerialGC -Xms40M -Xmx40M -Xmn16M -XX:SurvivorRatio=6 -verbose:gc -XX:+PrintGCDetails
+		//参数[并行GC]：-XX:+UseParNewGC -Xms40M -Xmx40M -Xmn16M -XX:SurvivorRatio=6 -verbose:gc -XX:+PrintGCDetails
+		MBObject obj = new MBObject(1);
+		for(int i = 1; i <= 11; i++) {
+			if(i == 9) {
+				System.out.println("Eden空间即将用完");
+			}
+			new MBObject(1);
+		}
 	}
 }
